 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2013-11-13

- r1048 output scaled polygon in the case of Unit.Length={mm, cm} [ver 1.5.0]
  - Modify setupPolygon2CutInfo() to load polygons in the case of Unit.Length is cm or mm.
  - expire INACTIVE mode and related methods > flip_inactive()
  - modify VLD_CNVG flag encoding in encPbitN()

--------------------------
2013-11-03

- r1047 bugfix: [ver 1.4.9]
  - initial temperature setting
  - log base off >> write file to unopened file pointer

--------------------------
2013-11-02

- r1046 compile on K/FX
  - clean package
--------------------------
2013-10-30

- r1045 compile on K/FX [ver 1.4.8]
  - update examples/SHC1D/shc1d.tp, examples/HeatedPlate/hplate.tp
  - FillHint is mandatory

--------------------------
2013-10-27

- r1044 Hall filling update [ver 1.4.7]

- r1043 Helicity sampling

--------------------------
2013-10-25

- r1042 Polygon Monitor

- r1041 change Monitor implementation
  - remove CELL_MONITOR
  - sampling line & points are reasonable, but polygon & primitive is not
  - component is not detected (bug)
  
--------------------------
2013-10-22

- r1040 Boundary ID based implementation
  - change algorithm from d_mid based to d_bcd based
  - delete d_mid related methods

--------------------------
2013-10-15

- r1039 substitute dfi file name
  - remove string variables of dfi file name and substituted by the refix of output file

--------------------------
2013-10-12

- r1038 bug fix for average restart

- r1037 repalce IntervalManager.h from CIOlib [ver 1.4.6]
  - change integer type from int to unsigned int in IntervalManager