@@ -25,7 +25,7 @@ AC_CONFIG_HEADERS([config.h])
 #
 # revision No.
 #
-FFVC_REVISION="20131113_1100"
+FFVC_REVISION="20131113_1800"
 AC_SUBST(FFVC_REVISION)
 
 
