@@ -113,11 +113,11 @@ HEADERS = $(doc_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/missing --run aclocal-1.12
+ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/missing --run aclocal-1.12
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/missing --run autoconf
-AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/missing --run autoheader
-AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/missing --run automake-1.12
+AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/missing --run autoconf
+AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/missing --run autoheader
+AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/missing --run automake-1.12
 AWK = awk
 CC = mpicc
 CCDEPMODE = depmode=gcc3
@@ -153,7 +153,7 @@ FFVC_FC = mpif90
 FFVC_FC_LD = 
 FFVC_LDFLAGS = 
 FFVC_LIBS =  -lstdc++ -lifcore
-FFVC_REVISION = 20131113_1100
+FFVC_REVISION = 20131113_1800
 FREALOPT = 
 GREP = /usr/bin/grep
 INSTALL = /usr/local/bin/ginstall -c
@@ -165,7 +165,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/missing --run makeinfo
+MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/missing --run makeinfo
 MAKE_SUB_DIRS = src/IP src/FB src/F_CORE src/FFV src/Util_Combsph doc
 MKDIR_P = /usr/local/bin/gmkdir -p
 MPICH_CFLAGS = 
@@ -197,10 +197,10 @@ TP_CFLAGS = -I/usr/local/FFV/TextParser/include
 TP_DIR = /usr/local/FFV/TextParser
 TP_LDFLAGS = -L/usr/local/FFV/TextParser/lib -lMPITP
 VERSION = 1.5.0
-abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/doc
-abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/doc
-abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9
-abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9
+abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/doc
+abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/doc
+abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0
+abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = ifort
@@ -222,7 +222,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.4.9/install-sh
+install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/FFVC-1.5.0/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
