@@ -59,7 +59,7 @@ while test $# -gt 0; do
     --version)
 cat <<EOF
 
-# FFV-C : Frontflow / violet Cartesian  Ver. 1.5.0  (20131113_1100)
+# FFV-C : Frontflow / violet Cartesian  Ver. 1.5.0  (20131113_1800)
 #
 # Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 # All rights reserved.
